--- a/res/values/text.xml
+++ b/res/values/text.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">GAOSP Configuration 3</string>
 	<!-- Buttons -->
     <string name="Bdefaults">Set defaults</string>
     <string name="Bapply">Apply new config</string>
