--- a/res/values/description.xml
+++ b/res/values/description.xml
@@ -28,5 +28,5 @@
 	<string name="threshold">When the CPU load reaches this point, the governor will scale the CPU up. Only ondemand gov.</string>
 	<string name="bias">Setting this value higher will "bias" the governor toward lower frequencies. Only ondemand gov.</string>
 	<string name="niceload">System will ignore higher background process priorities (saves battery) Only ondemand gov.</string>
-	<string name="fudgeswap">Use a specified amount of Swap and Compcache as free memory. High values can cause slowdowns.</string>
+	<string name="fudgeswap">Use a specified amount of Swap (SD and Compcache) as free memory. High values can cause slowdowns.</string>
 </resources>
